--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html>
-  <head>
-    <meta charset="utf-8">
-=======
 <html lang="en">
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <script src="https://use.fontawesome.com/d2c5f138c1.js"></script>
->>>>>>> 047045fed76eefbefab836ffdf481640f563e374
     <title>k1dog</title>
   </head>
   <body>
-    <div id="app"></div>
-<<<<<<< HEAD
-    <!-- built files will be auto injected -->
-=======
+    <div id="app">
+        <!-- built files will be auto injected -->
+        
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
     <script src="/dist/build.js"></script>
->>>>>>> 047045fed76eefbefab836ffdf481640f563e374
   </body>
 </html>
