--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <script src="https://use.fontawesome.com/d2c5f138c1.js"></script>
-    <title>k1dog</title>
-  </head>
-  <body>
-    <div id="app">
-        <!-- built files will be auto injected -->
-        
-    </div>
+    <head>
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 
+        <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
+        <script src="https://use.fontawesome.com/d2c5f138c1.js"></script>
+        <title>k1dog</title>
+    </head>
+    <body>
+        <div id="app">
+            <!-- built files will be auto injected -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
-    <script src="/dist/build.js"></script>
-  </body>
+        </div>
+        <script src="/dist/main.js"></script>
+    </body>
 </html>
