--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         <title>k1dog</title>
     </head>
     <body>
-        <div id="app">
-            <!-- built files will be auto injected -->
-
-        </div>
+        <div id="app"></div>
         <script src="/dist/main.js"></script>
     </body>
 </html>
